# pre-hopper-wiki

./: .gitignore  CLAUDE.md  LICENSE  PROVENANCE.md  README.md  SKILL.md  pyproject.toml
candidates/: README.md  cutlass.yaml  cuvs.yaml  flashinfer.yaml  pytorch.yaml  sglang.yaml  tensorrt-llm.yaml  tracked-repos.txt  vllm.yaml
data/: aliases.yaml  inclusion-policy.yaml  pr-page-skipped.yaml  refresh-cutoff.yaml  refresh-search-results.yaml  schemas.yaml  tags.yaml  version-claims.yaml
docs/: seed-candidates.md
queries/: by-hardware-feature.md  by-kernel-type.md  by-language.md  by-problem.md  by-repo.md  by-technique.md
references/: incremental-updates.md  ingestion.md  schema.md
scripts/: _wiki_root.py  classify_candidate.py  generate-indices.py  generate-pr-pages.py  get_page.py  grep_wiki.py  query.py  refresh_candidate_ledger.py  validate.py
sources/docs/: cuda-c-programming-guide.md  ptx-isa.md
sources/prs/flashinfer/: PR-1973.md  PR-385.md
sources/prs/vllm/: PR-29901.md
tests/: test_ingestion.py  test_tooling.py
tests/fixtures/gh/: cutlass.json  flashinfer.json
tests/fixtures/invalid/: bad-arch.md  bad-link.md  bad-status.md  blackwell-tag.md  empty-sources.md  unparseable.md
tests/fixtures/seed/: seed-manifest.yaml
tests/fixtures/seed/flashinfer/: PR-1973.json  PR-385.json
tests/fixtures/seed/vllm/: PR-29901.json
wiki/hardware/: cp-async-ampere.md  fp8-ada.md  mma-sync-turing.md
wiki/migration/: turing-to-ampere-cp-async.md
wiki/techniques/: shared-memory-double-buffering.md
